@@ -7,6 +7,7 @@ Generic changes/fixes
 	
 Device specific changes/fixes
 	* HottAdapter* - correct trigger description text in XML
+	* HoTTAdapter* - *.log remove evaluation of transmitter event and warning to avoid end user confusion
 
 Version 3.3.8 - 04 Aug 2019
 Generic changes/fixes
